fix broken link, adjust header spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 header {
     text-align: center;
+    margin-bottom: 2em;
+    font-size: 28px;
 }
 
 h1 {
@@ -24,7 +26,7 @@ h1 {
 }
 
 footer {
-    margin-top: 3em;
+    margin-top: 6em;
     text-align: center;
     font-family: Arial Rounded MT Bold;
     font-size: 12px;
